# cpp-kv

./: .gitignore  CMakeLists.txt  CMakeListsOld.txt  Makefile  README.md  compile_commands.json
.github/workflows/: unit_tests.yml
apps/storage-node/: CMakeLists.txt  in_memory_storage_service.cpp  in_memory_storage_service.h  main.cpp
cmake/: FetchGRPC.cmake  FetchGoogleTest.cmake  FetchSpdlog.cmake
docs/: roadmap.md
include/: channel.h  engine.h  in_memory_engine.h  serialization.h  wal.h
libs/common/: CMakeLists.txt
libs/common/include/: logging.h
libs/storage/: CMakeLists.txt
libs/storage/include/: engine.h  in_memory_engine.h  serialization.h  wal.h
libs/storage/src/: in_memory_engine.cpp  wal.cpp
proto/: CMakeLists.txt  storage.proto  test.proto
src/: in_memory_engine.cpp  main.cpp  serialization.cpp  wal.cpp
tests/: CMakeLists.txt  test_channel.cpp  test_wal.cpp
